# LyricCovers2.0

./: .gitignore  README.md  pyproject.toml  run.py
cloud-functions/tags-download/: main.py  requirements.txt
cloud-functions/youtube-download/: main.py  requirements.txt
configs/: feature_engineering.yaml  feature_engineering_test.yaml  model_training.yaml  model_training_test.yaml
data/: data_test.parquet  data_train.parquet  data_val.parquet
pipelines/: feature_engineering.py  model_training.py
steps/: analysis.py  dataset_processing.py  download.py  evaluation.py  features.py  importer.py  source_separation.py  training.py  transcription.py
test/unit/lyrics/: splits_test.py
thesis_csi/: enum.py  logging.py  materializers.py
thesis_csi/analysis/: artist.py  generes.py  language.py  original.py  plots.py  releases.py  settings.py
thesis_csi/analysis/assets/: genres.list
thesis_csi/analysis/lyrics/: splits.py
thesis_csi/analysis/lyrics/similarity/: calculation.py
thesis_csi/audio/: splitting.py
thesis_csi/model/: dataset.py  loss.py  materializer.py  metrics.py  model.py
thesis_csi/model/loss/: arcface_loss.py
thesis_csi/shared/: pub_sub.py  splits.py  utils.py
thesis_csi/source_separation/: demucs.py  shared.py  spleeter.py
thesis_csi/transcription/: whisper.py
